Added the final functionality of the game

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>TIC TAC TOE</title>
 </head>
 <body>
+    <h1 class="status"></h1>
+    <button class="resetBtn">RESET GAME</button>
+    <div class="finalResult"></div>
     <div class="app"></div>
     <script src="./script/index.js" type="module"></script>
 </body>
