Add the final changes

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <title>TIC TAC TOE</title>
 </head>
 <body>
-    <h1 class="status"></h1>
-    <button class="resetBtn">RESET GAME</button>
-    <div class="finalResult"></div>
+    <div class="popOut">
+        <h1 class="status"></h1>
+        <div class="finalResult"></div>
+        <button class="resetBtn">RESET GAME</button>
+    </div>
+   
     <div class="app"></div>
     <script src="./script/index.js" type="module"></script>
 </body>
